# rewynd

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  deny.toml  install.sh
.cargo/: config.toml
.github/: release.yml
.github/actions/linux-build-deps/: action.yml
.github/scripts/: fetch-ffmpeg.sh  release-version.sh
.github/workflows/: bump.yml  ci.yml  release.yml  site.yml
LICENSES/: README.md  gpu-video-MIT.txt
crates/app/: Cargo.toml  build.rs
crates/app/src/: badge.rs  badge_macos.rs  chime.rs  config.rs  main.rs  overlay.rs  toast.rs  tray.rs  updater.rs
crates/buffer/: Cargo.toml
crates/buffer/src/: lib.rs
crates/capture/: Cargo.toml
crates/capture/examples/: audio_probe.rs  focus_probe.rs  game_probe.rs  import_to_png.rs  linux_capture_probe.rs  record_h264.rs  windows_capture_probe.rs  windows_import_to_png.rs
crates/capture/src/: game.rs  lib.rs  linux.rs  windows.rs
crates/capture/src/linux/: audio.rs  focus.rs  mod.rs  pipewire_capture.rs  portal.rs  vulkan_modifiers.rs
crates/capture/src/macos/: audio.rs  focus.rs  mod.rs  resample.rs  video.rs
crates/capture/src/windows/: game_window.rs  mod.rs  wasapi_audio.rs  wgc_capture.rs
crates/clip/: Cargo.toml
crates/clip/src/: lib.rs  saver.rs  store.rs
crates/config/: Cargo.toml
crates/config/src/: activation.rs  clips.rs  desktop.rs  devices.rs  encoders.rs  lib.rs  lock.rs  paths.rs  process.rs  schema.rs  status.rs  upload_history.rs
crates/encode/: Cargo.toml
crates/encode/src/: annexb.rs  audio_mix.rs  gpu_video_backend.rs  lib.rs  opus_audio.rs  software.rs  software_texture.rs  videotoolbox.rs
crates/encode/tests/: rgba_to_nv12.rs  shared_device.rs  software_mux_roundtrip.rs  software_texture.rs
crates/gpu/: Cargo.toml  build.rs
crates/gpu/src/: import.rs  import_windows.rs  lib.rs
crates/installer/: Cargo.toml  build.rs
crates/installer/src/: main.rs  setup.rs
crates/mux/: Cargo.toml
crates/mux/src/: lib.rs  read.rs
crates/settings/: Cargo.toml  build.rs
crates/settings/src/: anim.rs  dock.rs  hotkey.rs  library.rs  main.rs  player.rs  scroll.rs  theme.rs  thumbs.rs  trimbar.rs  video.rs  wizard.rs
crates/upload/: Cargo.toml  build.rs
crates/upload/src/: lib.rs  youtube.rs
docs/: code-signing-policy.md  youtube-oauth.md
docs/adr/: 0001-wgpu-rev.md  0002-mp4-muxer.md  0003-audio-capture.md  0004-av-mux-sync.md  0005-config.md  0006-settings-ui-iced.md  0007-tray-notifications.md  0008-single-instance.md  0009-upload-client.md  0010-deep-audit-refactor.md  0011-youtube-upload.md  0012-linux-game-detection.md  0013-clip-library.md  0014-software-encoder-fallback.md  0015-macos-backend-screencapturekit-videotoolbox.md  0016-deeplink-activation-forwarding.md  0017-branded-windows-installer.md  0018-automatic-updates.md
docs/design/: arena.md  landing-page.md  render-assets.sh
docs/superpowers/plans/: 2026-07-03-trim-preview-and-brand-accent.md
docs/superpowers/specs/: 2026-07-03-trim-preview-and-brand-accent-design.md  2026-07-12-rewynd-landing-page-design.md
packaging/: Info.plist  rewynd.icns
packaging/aur/: .SRCINFO  PKGBUILD  README.md  tv.ganked.rewynd.desktop
site/: .dockerignore  .gitignore  Dockerfile  README.md  astro.config.mjs  package-lock.json  package.json
site/src/components/: BetaBar.astro  Download.astro  Features.astro  Footer.astro  GankedStrip.astro  Hero.astro  HowItWorks.astro  LibraryShot.astro  LogoMark.astro  Nav.astro  OpenSource.astro  Pipeline.astro  SvgDefs.astro  TrustStrip.astro
site/src/data/: clips.ts  release.ts
site/src/layouts/: Base.astro
site/src/pages/: index.astro
site/src/styles/: global.css
