[workspace]
resolver = "3"
members = [
    "crates/gpu",
    "crates/capture",
    "crates/encode",
    "crates/buffer",
    "crates/mux",
    "crates/upload",
    "crates/app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
repository = "https://github.com/gankedtv/rewynd"
authors = ["Thijs Herman"]

[workspace.dependencies]
# Internal crates
rewynd-gpu = { path = "crates/gpu" }
rewynd-capture = { path = "crates/capture" }
rewynd-encode = { path = "crates/encode" }
rewynd-buffer = { path = "crates/buffer" }
rewynd-mux = { path = "crates/mux" }
rewynd-upload = { path = "crates/upload" }

# GPU stack — pinned in lockstep per docs/adr/0001-wgpu-rev.md.
# Both crates resolve to the SAME wgpu source so wgpu::Texture types unify across
# the capture-import layer and the gpu-video encoder. Any bump is an ADR-worthy event.
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "1503796" }
gpu-video = { git = "https://github.com/software-mansion/smelter", rev = "4fff151fe4040d0df40a6688ca019c545f0e6402" }

# Shared third-party
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Force every wgpu/naga crate to the single pinned source (docs/adr/0001-wgpu-rev.md),
# so no transitive dependency can pull a second, incompatible wgpu from crates.io.
[patch.crates-io]
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "1503796" }
wgpu-hal = { git = "https://github.com/gfx-rs/wgpu", rev = "1503796" }
wgpu-core = { git = "https://github.com/gfx-rs/wgpu", rev = "1503796" }
wgpu-types = { git = "https://github.com/gfx-rs/wgpu", rev = "1503796" }
naga = { git = "https://github.com/gfx-rs/wgpu", rev = "1503796" }
