[workspace]
resolver = "3"
members = [
    "crates/gpu",
    "crates/capture",
    "crates/encode",
    "crates/buffer",
    "crates/mux",
    "crates/upload",
    "crates/app",
]
# Vendored third-party muxer fork (ADR 0004). It's a path dependency inside the workspace
# root, which would otherwise auto-include it as a member; exclude it so the clippy/fmt/
# coverage gates skip the vendored source. It still builds as a path dep of rewynd-mux.
exclude = ["vendor/mp4"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
repository = "https://github.com/gankedtv/rewynd"
authors = ["Thijs Herman"]

[workspace.dependencies]
# Internal crates
rewynd-gpu = { path = "crates/gpu" }
rewynd-capture = { path = "crates/capture" }
rewynd-encode = { path = "crates/encode" }
rewynd-buffer = { path = "crates/buffer" }
rewynd-mux = { path = "crates/mux" }
rewynd-upload = { path = "crates/upload" }

# GPU stack — pinned in lockstep per docs/adr/0001-wgpu-rev.md.
# Both crates resolve to the SAME wgpu source so wgpu::Texture types unify across
# the capture-import layer and the gpu-video encoder. Any bump is an ADR-worthy event.
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "1503796" }
gpu-video = { git = "https://github.com/software-mansion/smelter", rev = "4fff151fe4040d0df40a6688ca019c545f0e6402" }

# Shared third-party
drm-fourcc = "2"
# MP4 muxing (docs/adr/0002, 0004): vendored fork of alfg/mp4-rust 0.14 extended with an
# Opus audio track (vendor/mp4). Deliberately NOT a workspace member, so clippy/fmt/coverage
# gates skip the vendored third-party source; we still build it as a path dep.
mp4 = { path = "vendor/mp4" }
thiserror = "2"
anyhow = "1"
# Opus audio encoding (docs/adr/0004): safe bindings over libopus (BSD-3, GPL-3-compatible).
# Links the system libopus via pkg-config (CI installs libopus-dev).
opus = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
pollster = "0.4"
# Config file (docs/adr/0005): TOML deserialized via serde. Both MIT/Apache.
serde = { version = "1", features = ["derive"] }
toml = "1"

# Linux capture (PLAN §3.5): XDG ScreenCast portal + PipeWire. Linux-only.
ashpd = { version = "0.13", features = ["screencast"] }
pipewire = { version = "0.10", features = ["v0_3_65"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

# Force every wgpu/naga crate to the single pinned source (docs/adr/0001-wgpu-rev.md),
# so no transitive dependency can pull a second, incompatible wgpu from crates.io.
[patch.crates-io]
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "1503796" }
wgpu-hal = { git = "https://github.com/gfx-rs/wgpu", rev = "1503796" }
wgpu-core = { git = "https://github.com/gfx-rs/wgpu", rev = "1503796" }
wgpu-types = { git = "https://github.com/gfx-rs/wgpu", rev = "1503796" }
naga = { git = "https://github.com/gfx-rs/wgpu", rev = "1503796" }
