[workspace]
resolver = "3"
members = [
    "crates/gpu",
    "crates/capture",
    "crates/encode",
    "crates/buffer",
    "crates/mux",
    "crates/upload",
    "crates/config",
    "crates/clip",
    "crates/settings",
    "crates/app",
]
# Vendored third-party muxer fork (ADR 0004). It's a path dependency inside the workspace
# root, which would otherwise auto-include it as a member; exclude it so the clippy/fmt/
# coverage gates skip the vendored source. It still builds as a path dep of rewynd-mux.
exclude = ["vendor/mp4"]

[workspace.package]
version = "0.1.0"
edition = "2024"
# Tracks the real floor of the tree (iced 0.14 needs 1.88; notify-rust 4.18 needs 1.89). Keeping
# this honest matters: MSRV-aware resolution otherwise pins vulnerable transitive versions (it
# held `time` at the RUSTSEC-2026-0009 release).
rust-version = "1.89"
license = "GPL-3.0-or-later"
repository = "https://github.com/gankedtv/rewynd"
authors = ["Thijs Herman"]

[workspace.dependencies]
# Internal crates
rewynd-gpu = { path = "crates/gpu" }
rewynd-capture = { path = "crates/capture" }
rewynd-encode = { path = "crates/encode" }
rewynd-buffer = { path = "crates/buffer" }
rewynd-mux = { path = "crates/mux" }
rewynd-upload = { path = "crates/upload" }
rewynd-config = { path = "crates/config" }
rewynd-clip = { path = "crates/clip" }

# GPU stack — pinned in lockstep per docs/adr/0001-wgpu-rev.md.
# Both crates resolve to the SAME wgpu source so wgpu::Texture types unify across
# the capture-import layer and the gpu-video encoder. Any bump is an ADR-worthy event.
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "1503796" }
gpu-video = { git = "https://github.com/software-mansion/smelter", rev = "4fff151fe4040d0df40a6688ca019c545f0e6402" }

# Shared third-party
drm-fourcc = "2"
# MP4 muxing (docs/adr/0002, 0004): vendored fork of alfg/mp4-rust 0.14 extended with an
# Opus audio track (vendor/mp4). Deliberately NOT a workspace member, so clippy/fmt/coverage
# gates skip the vendored third-party source; we still build it as a path dep.
mp4 = { path = "vendor/mp4" }
thiserror = "2"
anyhow = "1"
# Opus audio encoding (docs/adr/0004): safe bindings over libopus (BSD-3, GPL-3-compatible).
# Links the system libopus via pkg-config (CI installs libopus-dev).
opus = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
pollster = "0.4"
# Config file (docs/adr/0005): TOML deserialized via serde. Both MIT/Apache.
serde = { version = "1", features = ["derive"] }
toml = "1"
# `flock` for the single-instance guard (docs/adr/0008). Unix-only, MIT/Apache.
libc = "0.2"
# ganked.tv upload client (docs/adr/0009): HTTP over rustls (no system TLS dep). MIT/Apache.
reqwest = { version = "0.13", features = ["json", "stream"] }
serde_json = "1"
futures-util = "0.3"
# Bridges tokio::fs::File to a reqwest streaming body (clips upload without buffering in RAM).
tokio-util = { version = "0.7", features = ["io"] }
# Local-time clip titles for uploads. Unlicense/MIT.
jiff = "0.2"
# HTTP mock server for the upload client's tests (dev-only). MIT/Apache.
wiremock = "0.6"
# RAII temp files/dirs for filesystem tests (dev-only). MIT/Apache.
tempfile = "3"
# PNG decode for the embedded brand mark (tray pixmap, window icon). MIT/Apache.
image = { version = "0.25", default-features = false, features = ["png"] }

# Linux capture (PLAN §3.5): XDG ScreenCast portal + PipeWire. Linux-only.
ashpd = { version = "0.13", features = ["screencast"] }
pipewire = { version = "0.10", features = ["v0_3_65"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

# Windows capture (PLAN §3.5): Windows Graphics Capture → D3D11. Windows-only. MIT.
# windows-capture drives the WGC session/frame pool; the `windows` crate (same 0.62.x
# its API surfaces, so the D3D11 types unify) creates the shareable textures + NT handles.
windows-capture = "2.0"
windows = { version = "0.62", features = [
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_System_Com",
    # IMMDevice::Activate's optional activation params are a PROPVARIANT, so the
    # method only generates with both of these on.
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    # IMMDevice::OpenPropertyStore (the endpoint friendly-name lookup).
    "Win32_UI_Shell_PropertiesSystem",
] }

# The settings window renders on the CPU (tiny-skia rasterizing, cosmic-text shaping), which
# is unusably slow at opt-level 0 — `cargo run` scrolled at a few fps. Only that render stack
# builds optimized in dev: a blanket `package."*"` would also optimize the wgpu tree and every
# other dependency, roughly doubling cold dev builds (locally and in CI) for no visible gain.
[profile.dev.package]
tiny-skia = { opt-level = 2 }
tiny-skia-path = { opt-level = 2 }
cosmic-text = { opt-level = 2 }
harfrust = { opt-level = 2 }
swash = { opt-level = 2 }
zeno = { opt-level = 2 }
ttf-parser = { opt-level = 2 }
fontdb = { opt-level = 2 }
softbuffer = { opt-level = 2 }
unicode-bidi = { opt-level = 2 }
unicode-script = { opt-level = 2 }
unicode-segmentation = { opt-level = 2 }
iced_tiny_skia = { opt-level = 2 }

# Force every wgpu/naga crate to the single pinned source (docs/adr/0001-wgpu-rev.md),
# so no transitive dependency can pull a second, incompatible wgpu from crates.io.
[patch.crates-io]
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "1503796" }
wgpu-hal = { git = "https://github.com/gfx-rs/wgpu", rev = "1503796" }
wgpu-core = { git = "https://github.com/gfx-rs/wgpu", rev = "1503796" }
wgpu-types = { git = "https://github.com/gfx-rs/wgpu", rev = "1503796" }
naga = { git = "https://github.com/gfx-rs/wgpu", rev = "1503796" }
