[package]
name = "rewynd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Lightweight instant-replay clip recorder: keeps a configurable replay window on the GPU, writes a clip on a hotkey."

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rewynd-buffer.workspace = true
rewynd-encode.workspace = true
rewynd-config.workspace = true

# Linux MVP wiring: capture + GPU import + the ScreenCast (capture) and
# GlobalShortcuts (hotkey) portals. Linux-only; the binary compiles elsewhere via a
# `#[cfg(not(target_os = "linux"))]` stub `main`.
[target.'cfg(target_os = "linux")'.dependencies]
rewynd-capture.workspace = true
rewynd-gpu.workspace = true
rewynd-clip.workspace = true
ashpd = { workspace = true, features = ["global_shortcuts"] }
# macros/sync drive the select!-based hotkey loop; signal funnels SIGTERM/SIGINT through the
# same orderly shutdown as tray Quit.
tokio = { workspace = true, features = ["macros", "signal", "sync"] }
pollster.workspace = true
futures-util.workspace = true
# Tray (StatusNotifierItem over D-Bus, no GTK — reuses our zbus stack) + desktop toast +
# PNG decode for the tray icon. See docs/adr/0007.
ksni = "0.3"
notify-rust = "4"
image = { version = "0.25", default-features = false, features = ["png"] }
# ganked.tv upload from the tray (docs/adr/0009); jiff stamps clip titles in local time.
rewynd-upload.workspace = true
jiff.workspace = true
