[package]
name = "rewynd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Lightweight instant-replay clip recorder: keeps a configurable replay window on the GPU, writes a clip on a hotkey."

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rewynd-buffer.workspace = true
rewynd-encode.workspace = true
rewynd-config.workspace = true

# Linux MVP wiring: capture + GPU import + the ScreenCast (capture) and
# GlobalShortcuts (hotkey) portals. Linux-only; the binary compiles elsewhere via a
# `#[cfg(not(target_os = "linux"))]` stub `main`.
[target.'cfg(target_os = "linux")'.dependencies]
rewynd-capture.workspace = true
rewynd-gpu.workspace = true
rewynd-clip.workspace = true
ashpd = { workspace = true, features = ["global_shortcuts"] }
# macros/sync drive the select!-based hotkey loop; signal funnels SIGTERM/SIGINT through the
# same orderly shutdown as tray Quit.
tokio = { workspace = true, features = ["macros", "signal", "sync", "time"] }
pollster.workspace = true
futures-util.workspace = true
# Tray (StatusNotifierItem over D-Bus, no GTK — reuses our zbus stack) + desktop toast +
# PNG decode for the tray icon. See docs/adr/0007.
ksni = "0.3"
notify-rust = "4"
image.workspace = true
# ganked.tv upload from the tray (docs/adr/0009); jiff stamps clip titles in local time.
rewynd-upload.workspace = true
jiff.workspace = true

# Windows MVP wiring (video-only): WGC capture + D3D11 import + a RegisterHotKey
# message loop. Tray/upload/audio follow with later parity issues.
[target.'cfg(target_os = "windows")'.dependencies]
rewynd-capture.workspace = true
rewynd-gpu.workspace = true
rewynd-clip.workspace = true
tokio = { workspace = true, features = ["signal"] }
pollster.workspace = true
notify-rust = "4"
windows = { workspace = true, features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
