[package]
name = "rewynd-capture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
wgpu.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Linux capture (PLAN §3.5): XDG ScreenCast portal + PipeWire. Linux-only.
[target.'cfg(target_os = "linux")'.dependencies]
ashpd.workspace = true
pipewire.workspace = true
# Used to query the GPU's supported DRM format modifiers for the PipeWire DMA-BUF
# negotiation via VK_EXT_image_drm_format_modifier. Matches the 0.38.x already
# pulled into Cargo.lock by wgpu-hal/gpu-video.
ash = "0.38"
# Type-safe DRM fourcc codes and the DRM_FORMAT_MOD_INVALID sentinel.
drm-fourcc.workspace = true

# Windows capture (PLAN §3.5): Windows Graphics Capture → D3D11 shared NT handles.
[target.'cfg(target_os = "windows")'.dependencies]
windows-capture.workspace = true
windows.workspace = true

[target.'cfg(target_os = "windows")'.dev-dependencies]
# The probe opens the shared handle on a second D3D11 device (D3D11CreateDevice
# needs the D3D driver-type constants) and writes the readback as a PNG.
windows = { workspace = true, features = ["Win32_Graphics_Direct3D"] }
tracing-subscriber.workspace = true
png = "0.18"

[target.'cfg(target_os = "linux")'.dev-dependencies]
tokio.workspace = true
tracing-subscriber.workspace = true
# PNG probe: import a captured DMA-BUF into a wgpu::Texture and save a screenshot.
# The probe reuses the existing tokio runtime to drive the async GpuContext::new,
# so no extra block-on shim is needed.
rewynd-gpu.workspace = true
png = "0.18"
# Live-pipeline recording spike: NV12 conversion + H.264 encode of captured frames.
rewynd-encode.workspace = true

[features]
# Diagnostic probe entry points (single-frame capture, format logging) for the examples.
probes = []

# Diagnostic probe: logs PipeWire node id, negotiated format, and per-frame
# DMA-BUF descriptors. Linux-only at runtime; the binary compiles everywhere via a
# `#[cfg(not(target_os = "linux"))]` stub `main`.
[[example]]
name = "linux_capture_probe"
required-features = ["probes"]

# Import the first captured DMA-BUF as a wgpu::Texture and save it as
# `screenshot.png`, proving the import + readback path. Linux-only at runtime;
# compiles everywhere via a `#[cfg(not(target_os = "linux"))]` stub `main`.
[[example]]
name = "import_to_png"
required-features = ["probes"]

# Live-pipeline spike: capture → import → RGBA/BGRx→NV12 → H.264 encode → write an
# Annex-B `.h264` file, then print a CPU/GPU overhead report. Linux-only at runtime;
# compiles everywhere via a `#[cfg(not(target_os = "linux"))]` stub `main`.
[[example]]
name = "record_h264"

# System-audio capture probe: capture the default sink monitor as PCM and log each
# buffer's peak/RMS level + PTS, proving non-silent capture. Linux-only at runtime;
# compiles everywhere via a `#[cfg(not(target_os = "linux"))]` stub `main`.
[[example]]
name = "audio_probe"

# Windows probe: log WGC shared-handle frames, then open the last handle on a
# second D3D11 device and save the readback as a PNG (proves cross-device sharing).
# Windows-only at runtime; compiles everywhere via a stub `main`.
[[example]]
name = "windows_capture_probe"
