[package]
name = "rewynd-clip"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "The clip save path: cut both ring buffers, pick an output path, mux to MP4."

[dependencies]
rewynd-buffer.workspace = true
rewynd-mux.workspace = true
rewynd-encode.workspace = true
rewynd-config.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
