[package]
name = "rewynd-clip"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "The clip save path: cut the rings, pick an output path (via the config crate's clip store), mux."

[dependencies]
rewynd-buffer.workspace = true
rewynd-mux.workspace = true
rewynd-encode.workspace = true
rewynd-config.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
