[package]
name = "rewynd-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "rewynd runtime configuration: a TOML config file with environment overrides."

# Deliberately light: no GPU/encode deps, so the settings app can depend on it without pulling
# the wgpu/gpu-video stack. The app maps these plain settings onto rewynd-encode's param types.
[dependencies]
serde.workspace = true
toml.workspace = true
tracing.workspace = true
# Resolves the platform's standard Videos directory (XDG user-dirs on Linux, Known Folders on
# Windows) for the default clip output location. MIT/Apache, no GPU.
dirs = "6"

# Advisory `flock` for the single-instance guard (docs/adr/0008); unix-only.
[target.'cfg(unix)'.dependencies]
libc.workspace = true

# Named-mutex single-instance guard (docs/adr/0008); windows-only.
[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_System_Threading", "Win32_Security"] }

[dev-dependencies]
tempfile.workspace = true
