[package]
name = "rewynd-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "rewynd runtime configuration: a TOML config file with environment overrides."

# Deliberately light: no GPU/encode deps, so the settings app can depend on it without pulling
# the wgpu/gpu-video stack. The app maps these plain settings onto rewynd-encode's param types.
[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
# Resolves the platform's standard Videos directory (XDG user-dirs on Linux, Known Folders on
# Windows) for the default clip output location. MIT/Apache, no GPU.
dirs = "6"

# Advisory `flock` for the single-instance guard (docs/adr/0008); unix-only.
[target.'cfg(unix)'.dependencies]
libc.workspace = true

# Named-mutex single-instance guard (docs/adr/0008) + the audio-input listing for
# the settings' microphone picker; windows-only.
[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Media_Audio",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
] }
# HKCU Run-key autostart (the Windows half of start-on-boot). Already in the tree
# transitively (reqwest), so this adds no new build cost. MIT/Apache.
windows-registry = "0.6"

[dev-dependencies]
tempfile.workspace = true
