[package]
name = "rewynd-gpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
wgpu.workspace = true
thiserror.workspace = true

# gpu-video provides the video-capable device creation (VideoAdapterExt). Only builds
# where Vulkan exists (Windows + non-Apple unixes), matching gpu-video's own gating.
[target.'cfg(any(windows, all(unix, not(target_os = "macos"), not(target_os = "ios"), not(target_os = "emscripten"))))'.dependencies]
gpu-video.workspace = true

# The D3D11 shared-handle import takes a windows-rs HANDLE — the same 0.62.x
# wgpu-hal itself uses at the pinned rev, so the types unify.
[target.'cfg(windows)'.dependencies]
windows.workspace = true

[build-dependencies]
cfg_aliases = "0.2.1"
