[package]
# The branded Windows installer: an Arena-styled window (logo, version, one Install button)
# that drives the real Velopack Setup.exe silently underneath (docs/adr/0017). Ships as
# `rewynd-win-Installer.exe`; the plain Setup.exe remains published beside it.
name = "rewynd-installer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "Branded installer for rewynd: an Arena-styled front for the Velopack Setup.exe."

[dependencies]
# Brand mark PNGs (the same ladder the app windows use).
rewynd-config.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Runs the blocking install off the UI thread; the done-state linger timer.
tokio.workspace = true

# Software rendering only (`tiny-skia`): the installer runs on machines whose GPU story is
# unknown, and a single static window needs no wgpu. `tokio` drives the install task and the
# progress ticks; `wayland`/`x11` keep the crate compiling on the Linux CI runner.
iced = { version = "0.14", default-features = false, features = [
    "tiny-skia",
    "tokio",
    "wayland",
    "x11",
    "image-without-codecs",
] }
# PNG decode for the brand mark and window icon (png only, codec choice stays ours).
image.workspace = true

# Embeds packaging/rewynd.ico as the exe icon. Host-gated to Windows, like the app crates.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile.workspace = true
