[package]
name = "rewynd-settings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description = "rewynd settings: a small iced GUI to view and edit the config file."

[dependencies]
rewynd-config.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Runs the stop-and-relaunch off the UI thread (spawn_blocking) so the window never freezes.
tokio.workspace = true

# iced with the tiny-skia SOFTWARE renderer only (no wgpu): the workspace's wgpu-v29
# [patch.crates-io] rewrite can't bite a tree with no wgpu, and a settings window doesn't need
# the GPU. See docs/adr/0006. `wayland` + `x11` enable winit's and softbuffer's Linux backends
# (dropping default features dropped them); `tokio` drives the rfd dialog future.
iced = { version = "0.14", default-features = false, features = [
    "tiny-skia",
    "tokio",
    "wayland",
    "x11",
] }
# Folder picker via the XDG Desktop Portal (no GTK build dep), matching our portal-based capture.
# The async dialog future is executor-agnostic — iced's tokio executor drives it.
rfd = { version = "0.17", default-features = false, features = ["xdg-portal"] }
